# as3935-rs

./: Cargo.toml  README.md
examples/: listen.rs
src/: lib.rs
src/device/: mod.rs
src/device/registers/: afe_gain_boost.rs  calibrate_oscillators.rs  clear_statistics.rs  display_lco_on_irq_pin.rs  display_srco_on_irq_pin.rs  display_trco_on_irq_pin.rs  distance_estimation.rs  frequency_division_ration_for_antenna_tuning.rs  internal_tuning_capacitors.rs  interrupt.rs  mask_disturber.rs  minimum_number_of_lightning.rs  mod.rs  noise_floor_level.rs  power_down.rs  preset_default.rs  spike_rejection.rs  watchdog_threshold.rs
src/interface/: conversion.rs  i2c.rs  mod.rs
