[package]
authors = ["Michael Moravec <oss@majkl.me>"]
categories = ["embedded", "hardware-support"]
description = "Rust I²C/SPI driver for AS3935 Franklin Lightning Sensor IC"
edition = "2018"
homepage = "https://github.com/trashware/as3935-rs"
keywords = ["raspberry", "as3935", "i2c", "spi", "lightning"]
license = "MIT"
name = "as3935"
readme = "README.md"
repository = "https://github.com/trashware/as3935-rs"
version = "0.1.0-dev"

[badges]
travis-ci = { repository = "trashware/as3935-rs", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
log = "0.4.6"
rppal = "0.11.3"

[dev-dependencies]
chrono = "0.4.7"
simple_logger = "1.3.0"
simple-signal = "1.1.1"

[patch.crates-io]
# https://github.com/golemparts/rppal/pull/33
rppal = { git = "https://github.com/golemparts/rppal.git" }

